--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>TenderHive</title>
+    <title>BIDTROVE</title>
   </head>
   <body>
     <div id="root"></div>
